Separated particle backgrounds

--- a/css/style.css
+++ b/css/style.css
@@ -1877,7 +1877,7 @@ filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
   color: #7ED321;
 }
 
-#particles-js{
+#particles-js, #particles-js-2, #particles-js-3, #particles-js-4 {
   width: 100%;
   height: 100%;
   background-color: #020817;
