--- a/css/style.css
+++ b/css/style.css
@@ -1807,7 +1807,10 @@ ul.list-d {
 
 .ver-c {
   position: absolute;
-  padding-top: 14em;
+  padding: 0;
+  display: flex;
+  height: 100vh;
+  align-items: center;
 }
 
 .goals p {
