--- a/css/style.css
+++ b/css/style.css
@@ -1015,7 +1015,7 @@ video#vidbg {
     opacity: 1; }
 
 .nav-black a {
-  color: #000;
+  color: #fff;
   opacity: 0.7; }
   .nav-black a:hover {
     opacity: 1; }
@@ -1061,7 +1061,7 @@ video#vidbg {
 }
 
 .sticky {
-  background-color: RGBA(240, 240, 240, 0.85);
+  background-color: RGBA(0, 0, 0, 0.85);
   opacity: 1;
   top: 0px;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 8px 0px;
