--- a/css/style.css
+++ b/css/style.css
@@ -1847,7 +1847,7 @@ ul.list-d {
   color: #fff;
 }
 
-.goals p:before {
+.goals p.top_bar:before {
   content: '';
     width: 100px;
     height: 10px;
@@ -1855,6 +1855,10 @@ ul.list-d {
     background-color: #fff;
     margin-bottom: 2em;
     position: relative;
+}
+
+.footnote {
+  opacity: 0.3;
 }
 
 .goal-1 {
