--- a/css/style.css
+++ b/css/style.css
@@ -654,10 +654,17 @@ td {
   width: 288px;
 }
 
-.about_us, .about_us_2, .gallery {
+.about_us, .about_us_2 {
   display: flex;
-  height: 100vh;
   align-items: center;
+}
+
+.about_us {
+  height: 100vh;
+}
+
+.about_us_2 {
+  height: 50vh;
 }
 
 .about_us h2 {
@@ -673,12 +680,19 @@ td {
   font-weight: 300;
 }
 
+.gallery {
+  display: inline-block;
+}
+
+
 .hiring h1 {
   color: #000;
-  padding: 0.5em 0; }
+  padding: 0.5em 0;
+  margin-bottom: 0.7em;}
 .hiring p {
   color: #000;
   margin-bottom: 1em; }
+
 
 .articles h2 {
   margin-bottom: 0.5em; }
