--- a/css/style.css
+++ b/css/style.css
@@ -553,23 +553,24 @@ td {
     vertical-align: top; }
   .products .products_grid {
     margin-top: 100px;
+    padding-bottom: 100px;
   }
   .products .gi {
     padding: 0;
-    height: 490px;
-    flex-direction: column;
+    text-align: center;
     flex: 1 0 auto; }
-    @media all and (max-width: 39.8em) {
-      .products .gi {
-        height: 500px; } }
-  .products .img-box {
-    height: 490px;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center; }
-  .products .text-box {
-    padding: 4em 1em 0;
-    max-width: 50%;}
+    .products .gi img {
+      display: inline;
+    }
+    .products .g-2up > .gi:nth-of-type(even) {
+      border-left: 1px solid #3A3A3A;
+    }
+
+  // .products .img-box {
+  //   height: 490px;
+  //   background-size: cover;
+  //   background-repeat: no-repeat;
+  //   background-position: center; }
   .product-image {
     padding: 4em 0;
     width: 100%;
@@ -1896,7 +1897,7 @@ ul.list-d {
 }
 
 .footnote {
-  opacity: 0.3;
+  opacity: 0.5;
 }
 
 .goal-1 {
