--- a/css/style.css
+++ b/css/style.css
@@ -635,7 +635,8 @@ td {
 }
 
 .hiring {
-  background-color: rgba(255,255,255,1); }
+  background-color: rgba(255,255,255,1);
+  padding-bottom: 4em;}
 
 .job-list ul.job-list {
   text-align: center;
