--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,6 @@ Pattern Lab doesn't have any CSS requirements, which means you can write your st
 You can use Sass, Less, vanilla CSS, or some other crazy thing I haven't heard of yet.
 So please don't use these styles. They're just here to put together the demo, and nothing more.
 They're intentionally gray, boring, and crappy because you're supposed to do this stuff yourself.
-
 Atomic design is philosophically complimentary with these CSS approaches:
 
 * SMACSS by Jonathan Snook http://smacss.com/
@@ -470,7 +469,7 @@ td {
   padding: 1em; }
   @media all and (max-width: 48em) {
     .lc, .header, [role=main] {
-      padding: 0 2em; } }
+      padding: 0 1.4em; } }
   .lc .small, .header .small, [role=main] .small {
     max-width: 47.5em;
     padding: 2em;
@@ -507,52 +506,121 @@ td {
       display:none; } }
 
 .products {
-  background-color: white;
-  padding-bottom: 0; }
-  .products p, .products h2, .products h3 {
+  padding-bottom: 0;}
+  .products p, .products h1, .products h2, .products h3 {
     color: #fff; }
-  .products h2:after {
-    content: '';
-    margin: 1em 0;
-    width: 3em;
-    height: 5px;
-    background-color: #fff;
-    display: block; }
-  .products h1 {
-    margin-bottom: 1em; }
+  // .products h1:after {
+  //   content: '';
+  //   margin: 0.7em 0;
+  //   width: 3em;
+  //   height: 5px;
+  //   background-color: #fff;
+  //   display: block; }
   .products span {
     font-weight: normal;
     font-style: italic;
     color: #BDC6CF;
     font-size: 0.75em; }
+  .products .product_title {
+    margin-bottom: 2em;
+  }
+  .products h1 {
+    margin-bottom: 1em;
+  }
+
+  @media all and (max-width: 46.8em) {
+  .products h1  {
+    font-size: 2em;
+    }
+  }
+
+
+  .products h2 {
+    font-size: 3em;
+  }
+  @media all and (max-width: 46.8em) {
+  .products h2 {
+  font-size: 1.8em;
+    }
+  }
+
+  .products p {
+    font-size: 2em;
+  }
+
+  @media all and (max-width: 46.8em) {
+  .products p{
+  font-size: 1.675em;
+    }
+  }
+  .products a {
+    color: #0074D9;
+    text-decoration: underline;
+  }
+  .products a:hover {
+    color: #fff;
+  }
+  .product_title h1 {
+    font-size: 4em;
+  }
+  .gray_f {
+    opacity: 0.3;
+  }
+
+  @media all and (min-width: 46.8em) {
   .products .flex-grid {
     display: flex;
     display: -webkit-flex;
-    flex-direction: column;
+    flex-direction: row;
     vertical-align: top; }
-  .products .gi {
-    padding: 0;
-    height: 490px;
-    flex-direction: column;
-    flex: 1 0 auto; }
-    @media all and (max-width: 39.8em) {
-      .products .gi {
-        height: 500px; } }
-  .products .img-box {
-    height: 490px;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center; }
-  .products .text-box {
-    padding: 4em 1em 0;
-    max-width: 50%;}
+  }
+  @media all and (min-width: 46.8em) {
+    .products .gi {
+      padding: 0;
+      text-align: center;
+      flex: 1 0 auto; }
+  }
+
+  .products .products_grid {
+    margin-top: 100px;
+    padding-bottom: 100px;
+  }
+    .products .gi img {
+      display: inline;
+    }
+   @media all and (min-width: 46.8em) {
+    .products .g-2up > .gi:nth-of-type(even) {
+      border-left: 1px solid #3A3A3A;
+    }
+  }
+
+  @media all and (max-width: 46.8em) {
+    .products .g-2up > .gi:nth-of-type(even) {
+      border-top: 1px solid #3A3A3A;
+      margin-top: 1em;
+      padding-top: 3em;
+    }
+  }
+
+  // .products .img-box {
+  //   height: 490px;
+  //   background-size: cover;
+  //   background-repeat: no-repeat;
+  //   background-position: center; }
   .product-image {
     padding: 4em 0;
     width: 100%;
     display: block;
   }
+  .products .product_logo {
+    height: 120px;
+  }
 
-  .product
+  @media all and (max-width: 46.8em) {
+    .products .product_logo  {
+      height: 80px;
+      }
+  }
 
   .product-image img {
     display: block;
@@ -588,6 +656,10 @@ td {
 .over-margin-r {
   margin-right: -4em; }
 
+.over-margin-b {
+  margin-bottom: 4em;
+}
+
 .low-z {
   position: relative;
   z-index: -1; }
@@ -605,7 +677,8 @@ td {
 }
 
 .hiring {
-  background-color: rgba(255,255,255,1); }
+  background-color: rgba(255,255,255,1);
+  padding-bottom: 4em;}
 
 .job-list ul.job-list {
   text-align: center;
@@ -627,23 +700,72 @@ td {
       .job-list li {
         margin: 0 1em 1em 1em; }}
 
+@media all and (max-width: 46.8em) {
+      .job-list li {
+        margin: 0.7em 0; }}
+
 .job-list li .btn-w {
   width: 288px;
 }
 
-.about_us {
-  //background: url(../images/about_bg.svg) no-repeat bottom right;
-  background: url(../images/about_bg.jpg) no-repeat;
-  background-position: center;
-  background-size: cover;
+.about_us, .about_us_2 {
+  display: flex;
+  align-items: center;
 }
+
+.about_us {
+  height: 100vh;
+}
+
+.about_us_2 {
+  height: 50vh;
+}
+
+.about_us h2 {
+  color: #fff;
+  font-size: 3em;
+  line-height: 1.5em;
+}
+
+@media all and (max-width: 46.8em) {
+  .about_us h2 {
+  font-size: 1.8em;
+    }
+  }
+
+.about_us_2 h2 {
+  font-size: 2em;
+  line-height: 1.5em;
+  color: #000;
+  font-weight: 300;
+}
+
+@media all and (max-width: 46.8em) {
+    .about_us_2 h2 {
+      font-size: 1.675em;
+      line-height: 1.4em;
+    }
+  }
+
+.gallery {
+  display: inline-block;
+}
+
 
 .hiring h1 {
   color: #000;
-  padding: 0.5em 0; }
+  padding: 0.5em 0;
+  margin-bottom: 0.7em;}
+@media all and (max-width: 46.8em) {
+    .hiring h1{
+      font-size: 2em;
+    }
+  }
+
 .hiring p {
   color: #000;
   margin-bottom: 1em; }
+
 
 .articles h2 {
   margin-bottom: 0.5em; }
@@ -896,6 +1018,10 @@ td {
   background-color: #020817;
 }
 
+.clean-white {
+  background-color: #fff;
+}
+
 
 video#vidbg {
   position: fixed;
@@ -935,6 +1061,11 @@ video#vidbg {
   @media all and (min-width: 46.8em) {
     .logo {
       max-width: 9rem; } }
+  @media all and (max-width: 39.8em)  {
+    .logo {
+      padding-top: 1em;
+    }
+  }
 
 .nav-toggle {
   float: right;
@@ -967,22 +1098,31 @@ video#vidbg {
   -webkit-transform: translateY(-50%);
   -moz-animation-duration: 2s;
   -webkit-animation-duration: 2s; }
-  .tagline h1 {
-    color: #fff; }
+  .tagline h1, h2 {
+    color: #fff;
+    margin-bottom: 1.3em; }
   .tagline p {
     max-width: 37.5em;
     color: #fff;
     margin-top: 1em;}
     @media all and (max-width: 39.8em) {
-      .tagline h1 {
-        font-size: 1.4375em; } }
+      .tagline {
+        top: 30%;
+      }
+      .tagline h1.intro {
+        font-size: 1.675em;
+        line-height: 1.4em;}
+        .tagline h2.intro_h2 {
+          font-size: 1.4em;
+          line-height: 1.3em;
+          } }
   .tagline h1:before {
     content: '';
     width: 100px;
     height: 10px;
     display: block;
     background-color: #fff;
-    margin-bottom: 2em;
+    margin-bottom: 1.5em;
     position: relative; }
 
 /*------------------------------------*\
@@ -1072,8 +1212,8 @@ video#vidbg {
   padding-top: 7px;
 }
 
-.sticky_h nav ul {
-
+.sticky_h img.logo {
+  padding-top: 10px;
 }
 
 
@@ -1090,8 +1230,8 @@ video#vidbg {
 .footer {
   clear: both;
   overflow: hidden;
-  background: RGBA(51, 59, 66, 1.00);
-  color: #fff;
+  background: #fff;
+  color: #000;
   line-height: 1.2; }
   .footer h1 {
     color: #B8E986;
@@ -1100,11 +1240,6 @@ video#vidbg {
   .footer .gi {
     padding: 0;
   }
-
-  .footer .g {
-    padding: 1em 0; }
-  .footer a {
-    color: #BDC6CF; }
   .footer small {
     color: #9B9B9B;
     padding-left: 0;}
@@ -1125,7 +1260,7 @@ video#vidbg {
 .footer i {
   margin-right: 1em;}
 .footer a {
-  color: #fff; }
+  color: #000; }
 
 /* Social List */
 .social-list li {
@@ -1141,27 +1276,27 @@ video#vidbg {
   margin-top: 1em;
 }
 
+.ti-linkedin {
+  color: #0084BF;
+}
+
 .footer .icons, .footer .company-info {
-  float: left;
-  text-align: left;
   width: 100%;
+  text-align: center;
 }
 
 @media all and (min-width: 46.8em) {
       .footer .icons, .footer .company-info {
         margin-top:0;
-        float: right;
-        width: 100%;
-        text-align: right;}
+        width: 100%;}
       }
 
-.footer .company-info li {
-  color: RGBA(255, 255, 255, 0.5);
-  font-size: 0.75em;
-  margin-bottom: 0.5em;
+.footer .company-info p {
+  color: RGBA(0, 0, 0, 0.5);
+  font-size: 0.75em;;
 }
-.footer .company-info li a {
-  color: RGBA(255, 255, 255, 0.5);
+.footer .company-info a {
+  color: RGBA(0, 0, 0, 0.5);
 }
 
 .nav-footer {
@@ -1178,12 +1313,7 @@ video#vidbg {
     padding: 1em; }
 
 .copyright {
-  font-size: 0.75em;
-  padding: 1em 0;
-  color: RGBA(255, 255, 255, 0.5);
-  float: left;
-  clear: both;
-  border-top: 1px solid #4a4a4a; }
+  // border-top: 1px solid #D8D8D8; }
   @media all and (min-width: 46.8em) {
     .copyright {
       /* float: right;*/} }
@@ -1191,8 +1321,13 @@ video#vidbg {
 /*------------------------------------*\
     $TEXT Styles
 \*------------------------------------*/
-.intro {
-  font-size: 1.8em; }
+h1.intro {
+  font-size: 2em; }
+h2.intro_h2 {
+  font-size: 1.8em;
+  font-weight: 300;
+}
+
 
 .pullquote {
   font-family: Georgia, Times, "Times New Roman", serif;
@@ -1361,10 +1496,10 @@ video#vidbg {
     color: #000; }
 
 .btn-p {
-  color: #8695DA;
-  border-color: #8695DA; }
+  color: #3E86FB;
+  border-color: #3E86FB; }
   .btn-p:hover, .btn-p:focus {
-    background: #8695DA;
+    background: #3E86FB;
     color: #fff; }
 
 .rounded {
@@ -1795,6 +1930,12 @@ ul.list-d {
   margin-bottom: 1em;
 }
 
+@media all and (max-width: 46.8em) {
+  .goals h2 {
+  font-size: 1.8em;
+    }
+  }
+
 .goal-number {
   margin-top: 1em;
   font-size: 24pt;
@@ -1818,7 +1959,13 @@ ul.list-d {
   color: #fff;
 }
 
-.goals p:before {
+@media all and (max-width: 46.8em) {
+  .goals p {
+  max-width: 80%;
+    }
+  }
+
+.goals p.top_bar:before {
   content: '';
     width: 100px;
     height: 10px;
@@ -1826,6 +1973,10 @@ ul.list-d {
     background-color: #fff;
     margin-bottom: 2em;
     position: relative;
+}
+
+.footnote {
+  opacity: 0.5;
 }
 
 .goal-1 {
